tests/errors/pre_asm/mcr_unexpected_chars_dec/unexpected_chars_dec.as
; unexpected chars after macro declaration
mcr myMcr characters
mov r1, r2
endmcr
